--- a/autocomplete_ios/autocomplete_ios/Base.lproj/Main.storyboard
+++ b/autocomplete_ios/autocomplete_ios/Base.lproj/Main.storyboard
@@ -29,6 +29,10 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="tbs-NQ-4r2">
                                 <rect key="frame" x="16" y="58" width="568" height="542"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="ASI-th-gLY"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="cFr-6z-dio"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
